--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve-dist": "ws --compress -d dist --open"
   },
   "devDependencies": {
+    "@ui5/cli": "^4.0.34",
     "ui5-middleware-simpleproxy": "^3.5.2"
   }
 }
